Add mining/level tags to ores, implement (material) block loot tables