@@ -20,22 +20,26 @@ import com.tterrag.registrate.util.entry.ItemEntry;
 import lombok.Getter;
 import org.jetbrains.annotations.Nullable;
 import conductance.api.material.Material;
+import conductance.api.material.MaterialOreType;
 import conductance.api.material.TaggedMaterialSet;
-import conductance.api.registry.TaggedSetRegistry;
+import conductance.api.registry.MaterialRegistry;
 import conductance.Conductance;
 
-public final class MaterialRegistry implements TaggedSetRegistry<Material, TaggedMaterialSet> {
+public final class MaterialRegistryImpl implements MaterialRegistry {
 
-	public static final MaterialRegistry INSTANCE = new MaterialRegistry();
+	public static final MaterialRegistryImpl INSTANCE = new MaterialRegistryImpl();
 	@Getter
 	private final Table<TaggedMaterialSet, Material, ItemEntry<? extends Item>> generatedItemRegistry = HashBasedTable.create();
 	@Getter
 	private final Table<TaggedMaterialSet, Material, BlockEntry<? extends Block>> generatedBlockRegistry = HashBasedTable.create();
 	@Getter
 	private final Table<TaggedMaterialSet, Material, FluidEntry<? extends Fluid>> generatedFluidRegistry = HashBasedTable.create();
+	@Getter
+	private final Table<MaterialOreType, Material, BlockEntry<? extends Block>> generatedOreRegistry = HashBasedTable.create();
 	private final Table<TaggedMaterialSet, Material, List<Item>> itemRegistry = HashBasedTable.create();
 	private final Table<TaggedMaterialSet, Material, List<Block>> blockRegistry = HashBasedTable.create();
 	private final Table<TaggedMaterialSet, Material, List<Fluid>> fluidRegistry = HashBasedTable.create();
+	private final Table<MaterialOreType, Material, List<Block>> oreRegistry = HashBasedTable.create();
 	private boolean frozen = false;
 
 	@Override
@@ -52,7 +56,7 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 	@Nullable
 	public Item getItemUnsafe(final TaggedMaterialSet taggedSet, final Material material) {
 		final List<Item> list = this.itemRegistry.get(taggedSet, material);
-		return list == null || list.isEmpty() ? null : list.get(0);
+		return list == null || list.isEmpty() ? null : list.getFirst();
 	}
 
 	@Override
@@ -69,7 +73,7 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 	@Nullable
 	public Block getBlockUnsafe(final TaggedMaterialSet taggedSet, final Material material) {
 		final List<Block> list = this.blockRegistry.get(taggedSet, material);
-		return list == null || list.isEmpty() ? null : list.get(0);
+		return list == null || list.isEmpty() ? null : list.getFirst();
 	}
 
 	@Override
@@ -86,7 +90,24 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 	@Nullable
 	public Fluid getFluidUnsafe(final TaggedMaterialSet taggedSet, final Material material) {
 		final List<Fluid> list = this.fluidRegistry.get(taggedSet, material);
-		return list == null || list.isEmpty() ? null : list.get(0);
+		return list == null || list.isEmpty() ? null : list.getFirst();
+	}
+
+	@Override
+	public Optional<Block> getOre(final MaterialOreType oreType, final Material material) {
+		return Optional.ofNullable(this.getOreUnsafe(oreType, material));
+	}
+
+	@Override
+	public ItemStack getOre(final MaterialOreType oreType, final Material material, final int count) {
+		return this.getOre(oreType, material).map(block -> new ItemStack(block, count)).orElse(ItemStack.EMPTY);
+	}
+
+	@Override
+	@Nullable
+	public Block getOreUnsafe(final MaterialOreType oreType, final Material material) {
+		final List<Block> list = this.oreRegistry.get(oreType, material);
+		return list == null || list.isEmpty() ? null : list.getFirst();
 	}
 
 	@Override
@@ -125,6 +146,14 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 		this.generatedFluidRegistry.put(taggedSet, material, fluid);
 	}
 
+	@Override
+	public void register(final MaterialOreType oreType, final Material material, final BlockEntry<? extends Block> block) {
+		if (this.frozen) {
+			throw new IllegalStateException("Trying to register ore in frozen MaterialRegistry!");
+		}
+		this.generatedOreRegistry.put(oreType, material, block);
+	}
+
 	public void freeze() {
 		Conductance.LOGGER.info("MaterialRegistry has been frozen!");
 		this.frozen = true;
@@ -140,6 +169,10 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 
 	public Table<TaggedMaterialSet, Material, List<Fluid>> getFluidTable() {
 		return ImmutableTable.copyOf(this.fluidRegistry);
+	}
+
+	public Table<MaterialOreType, Material, List<Block>> getOreTable() {
+		return ImmutableTable.copyOf(this.oreRegistry);
 	}
 
 	private void registerItemInternal(final TaggedMaterialSet taggedSet, final Material material, final ItemLike... items) {
@@ -171,28 +204,42 @@ public final class MaterialRegistry implements TaggedSetRegistry<Material, Tagge
 		list.addAll(Arrays.asList(fluids));
 	}
 
+	private void registerOreInternal(final MaterialOreType oreType, final Material material, final Block... blocks) {
+		List<Block> list = this.oreRegistry.get(oreType, material);
+		if (list == null) {
+			list = new ArrayList<>();
+			this.oreRegistry.put(oreType, material, list);
+		}
+		list.addAll(Arrays.asList(blocks));
+	}
+
 	public void reload() {
 		this.itemRegistry.clear();
 		this.blockRegistry.clear();
 		this.fluidRegistry.clear();
+		this.oreRegistry.clear();
 
-		MaterialRegistry.registerOverriddenComponents();
+		MaterialRegistryImpl.registerOverriddenComponents();
 
 		this.generatedItemRegistry.cellSet().forEach(cell -> this.registerItemInternal(cell.getRowKey(), cell.getColumnKey(), cell.getValue().get()));
 		this.generatedBlockRegistry.cellSet().forEach(cell -> this.registerBlockInternal(cell.getRowKey(), cell.getColumnKey(), cell.getValue().get()));
 		this.generatedFluidRegistry.cellSet().forEach(cell -> this.registerFluidInternal(cell.getRowKey(), cell.getColumnKey(), cell.getValue().get()));
+		this.generatedOreRegistry.cellSet().forEach(cell -> this.registerOreInternal(cell.getRowKey(), cell.getColumnKey(), cell.getValue().get()));
 	}
 
 	private static void registerOverriddenComponents() {
 		MaterialOverrideRegister.getOverrides().rowMap().forEach((set, mapping) -> mapping.forEach((material, overrides) -> {
 			Arrays.stream(overrides).forEach(override -> {
 				if (set.isBlockGenerator() && override instanceof final Block block) {
-					MaterialRegistry.INSTANCE.registerBlockInternal(set, material, block);
+					MaterialRegistryImpl.INSTANCE.registerBlockInternal(set, material, block);
 				}
 				if (set.isItemGenerator()) {
-					MaterialRegistry.INSTANCE.registerItemInternal(set, material, override);
+					MaterialRegistryImpl.INSTANCE.registerItemInternal(set, material, override);
 				}
 			});
+		}));
+		MaterialOverrideRegister.getOreOverrides().rowMap().forEach((oreType, mapping) -> mapping.forEach((material, overrides) -> {
+			MaterialRegistryImpl.INSTANCE.registerOreInternal(oreType, material, overrides);
 		}));
 	}
 }
